Trim content. Moved to info.algoritics.com.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,11 @@
 <!DOCTYPE html>
 <html>
     {% include head.html %}
-    <body id="page-top" class="index">
-    {% include nav.html %}
-    {% include header.html %}
-    {% include portfolio_grid.html %}
-    {% include about.html %}
-
-    {% if site.contact == "static" %}
-    {% include contact_static.html %}
-    {% else %}
-    {% include contact.html %}
-    {% endif %}
-
-    {% include footer.html %}
-    {% include modals.html %}
-    {% include js.html %}
+    <body>
+      <h1>Redirecting to AlgorithmHub...</h1>
+      <a href="http://www.algorithmhub.com">AlgorithmHub, Inc.</a>
+      <br>
+      <br>
+      <a href="http://info.algoritics.com">Algoritics, LLC</a>
     </body>
 </html>
